full participation and points func
